css/upcoming.css
/* ... */
.cardGenres {
    display: none;
}

.cardTitle {
    margin-right: 10px;
}

.cardInfoExtra span {
    background-color: #030714;
    padding: 0.25rem 0.5rem;
    border-radius: 3px;
}

.cardImg {
    width: 100%;
    height: 450px;
    transition: 0.5s;
}

/* .card div:nth-of-type(3) {
    color: red;
    align-self: center;
    align-content: flex-start;
} */

.cardOverview {
    width: 250px;
    position: absolute;
    display: flex;
    opacity: 0;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transition: 0.5s;
}

.cardOverview div:first-child {
    margin-bottom: 30px;
    font-size: 40px;
    font-weight: 700;
}

.cardOverview div:last-child {
    text-align: center;
    font-size: 20px;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 12;
    /* number of lines to show */
    line-clamp: 12;
    -webkit-box-orient: vertical;
}

.red {
    color: red;
}

.orange {
    color: orange;
}

.greenyellow {
    color: greenyellow;
}

.ecardOuter {
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    opacity: 0;
    visibility: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 4;
}

.expandedCard {
    width: 100%;
    background-image: var(--ecard);
    margin: 0 60px;
    border-radius: 20px;
    display: flex;
    flex-direction: column;
    transition: 0.5s;
    overflow: hidden;
    box-shadow: 10px 10px 20px var(--ecardShadow);
}

#ecard {
    display: flex;
    color: var(--white);
}

#ecardInfo {
    width: 100%;
    /* display: flex;
    justify-content: space-between;
    align-items: center; */
    transition: 0.5s;
}

#ecardTagline {
    font-size: 20px;
    margin: 0 20px 20px;
}

#ecardInfo div:nth-of-type(3) {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
}

#ecardTitle {
    font-size: 40px;
    margin: 0 20px 20px;
}

#ecardClose {
    width: 20px;
    height: 20px;
    margin: 20px;
    align-self: flex-end;
    cursor: pointer;
}

#ecardImg {
    width: 300px;
    height: 450px;
    transition: 0.5s;
    margin-top: -60px;
    border-radius: 20px;
    box-shadow: 10px 10px 10px var(--ecardImgShadow);
}

#ecardRatingNTime {
    width: 180px;
    font-size: 20px;
    background-color: #030714;
    padding: 0.5rem 0.5rem;
    border-radius: 10px;
    margin-left: 20px;
    margin-right: 10px;
    text-align: center;
}

#ecardGenres {
    width: 100%;
    list-style: none;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-wrap: wrap;
}

#ecardGenres li {
    border: 1px solid rgb(214, 214, 214);
    border-radius: 20px;
    padding: 10px;
    margin: 0 10px 20px;
}

#ecardGenres li:hover {
    border: 1px solid rgb(104, 104, 104);
    cursor: pointer;
    color: rgb(214, 214, 214);
}

#ecardOverview {
    font-size: 20px;
    margin: 20px 20px 20px;
    overflow: hidden;
    text-overflow: ellipsis;
    max-height: 5.2em;
    line-height: 1.3em;
}

#ecardWatch {
    color: var(--white);
    font-size: 35px;
    margin: 20px 20px 20px;
}

.ecardVideo {
    width: 400px;
    height: 225px;
    border-radius: 20px;
    margin: 0 20px;
    box-shadow: 10px 10px 20px var(--ecardShadow);
}

.ecardVideosList {
    width: 100%;
    display: flex;
    transition: 0.5s ease-in-out;
    margin-bottom: 20px;
}

.ecardVideosOuter {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: -225px;
}

#videoPre {
    width: 40px;
    height: 225px;
    background-color: black;
    align-self: flex-start;
    z-index: 3;
    opacity: 0;
    visibility: hidden;
    cursor: pointer;
    transition: 0.5s ease-in-out;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 25px 0px 25px 1px;
}

#videoPre img {
    width: 50px;
    height: 50px;
}

#videoPre:hover {
    opacity: 0.8 !important;
}

#videoNxt {
    width: 40px;
    height: 225px;
    background-color: black;
    align-self: flex-end;
    z-index: 3;
    opacity: 0.4;
    cursor: pointer;
    transition: 0.5s ease-in-out;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: -25px 0px 25px 1px;
}

#videoNxt img {
    width: 50px;
    height: 50px;
}

#videoNxt:hover {
    opacity: 0.8 !important;
}

.blurred {
    filter: blur(8px);
}
/* ... */

